Allow embeddors to override helper apps.  Bug 147142, patch by philipl@mail.utexas.edu (Philip Langdale), r=bzbarsky, sr=blake